--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,20 @@ if(NOT GTEST_LIBRARY)
 endif()
 
 set(BATUP_SOURCE
+  src/compressor.h
+  src/decompressor.h
+  src/properties.h
+  src/wordordercomp.h
+  src/wordordercomp.cpp
+  src/wordorderdecomp.h
+  src/wordorderdecomp.cpp
+  src/properties.cpp
+  src/app.h
+  src/app.cpp  
+  src/compapp.h
+  src/compapp.cpp
+  src/decompapp.h
+  src/decompapp.cpp
 )
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
@@ -27,15 +41,47 @@ add_executable(batup ${BATUP_SOURCE} src/main.cpp)
 
 target_link_libraries(batup -lm )
 
+add_executable(batdown ${BATUP_SOURCE} src/main.cpp)
+
+target_link_libraries(batdown -lm )
+
 enable_testing()
 
-add_executable(test test/test.cpp ${BATUP_SOURCE})
-target_include_directories(test PRIVATE ${GTEST_INCLUDE})
-target_link_libraries(test ${GTEST_LIBRARY} -lstdc++ -lpthread -lm )
+add_executable(propertiestest test/propertiestest.cpp ${BATUP_SOURCE})
+target_include_directories(propertiestest PRIVATE ${GTEST_INCLUDE})
+target_link_libraries(propertiestest ${GTEST_LIBRARY} -lstdc++ -lpthread -lm )
 
 add_test(
-  NAME TradeStreamTest
-  COMMAND tradestreamtest
+  NAME PropertiesTest
+  COMMAND propertiestest
   )
 
+add_executable(byteordertest test/byteordertest.cpp ${BATUP_SOURCE})
+target_include_directories(byteordertest PRIVATE ${GTEST_INCLUDE})
+target_link_libraries(byteordertest ${GTEST_LIBRARY} -lstdc++ -lpthread -lm )
+
+add_test(
+  NAME ByteOrderTest
+  COMMAND byteordertest
+  )
+
+
+
+add_executable(wordordercomptest test/wordordercomptest.cpp ${BATUP_SOURCE})
+target_include_directories(wordordercomptest PRIVATE ${GTEST_INCLUDE})
+target_link_libraries(wordordercomptest ${GTEST_LIBRARY} -lstdc++ -lpthread -lm )
+
+add_test(
+  NAME WordOrderCompTest
+  COMMAND wordordercomptest
+  )
+
+add_executable(wordorderdecomptest test/wordorderdecomptest.cpp ${BATUP_SOURCE})
+target_include_directories(wordorderdecomptest PRIVATE ${GTEST_INCLUDE})
+target_link_libraries(wordorderdecomptest ${GTEST_LIBRARY} -lstdc++ -lpthread -lm )
+
+add_test(
+  NAME WordOrderDecompTest
+  COMMAND wordorderdecomptest
+  )
 
